--- a/Rollers/wwwroot/css/style.css
+++ b/Rollers/wwwroot/css/style.css
@@ -1,3 +1,6 @@
 ﻿body {
-    background-color: red;
+    font-size: 13px;
+    font-family: Verdana, Arial, Helvetica, Sans-Serif;
+    background-color: #f7f7fa;
+    padding-left: 40px;
 }
