--- a/Rollers/Views/Shared/_Layout.cshtml
+++ b/Rollers/Views/Shared/_Layout.cshtml
@@ -461,6 +461,7 @@ window.ShopifyAnalytics.merchantGoogleAnalytics = function() {
           element.attachEvent('on' + type, callback);
         }
       }
+
       function decorate(event) {
         event = event || window.event;
         var target = event.target || event.srcElement;
@@ -748,48 +749,13 @@ window.ShopifyAnalytics.merchantGoogleAnalytics = function() {
                                 <span class="navbar-toggler-icon"></span>
                             </button>
 
-                            <a v-if="!isInfluencerTemplate" v-cloak href="/" class="navbar-brand mx-auto" name="Bunker Branding Co." title="Bunker Branding Co." aria-label="Bunker Branding Co.">
+                            <a v-if="!isInfluencerTemplate" v-cloak href="/" class="navbar-brand mx-auto" name="Roller Skates" title="Bunker Branding Co." aria-label="Bunker Branding Co.">
 
-                                <img v-if="isLogoLight" src="//cdn.shopify.com/s/files/1/2788/8404/files/bunker-branding-logo-white_300x.png?v=1532322859" alt="Bunker Branding Co." class="img-fluid">
-                                <img v-else src="//cdn.shopify.com/s/files/1/2788/8404/files/bunker-branding-logo-white_300x.png?v=1532322859" alt="Bunker Branding Co." class="img-fluid">
-
-                            </a>
-
-                            <a v-if="isInfluencerTemplate" v-cloak :href="currentInfluencer.data.url" class="navbar-brand mx-auto" name="Bunker Branding Co." title="Bunker Branding Co." aria-label="Bunker Branding Co.">
-
-                                <img v-if="isLogoLight" src="//cdn.shopify.com/s/files/1/2788/8404/files/bunker-branding-logo-white_300x.png?v=1532322859" alt="Bunker Branding Co." class="img-fluid">
-                                <img v-else src="//cdn.shopify.com/s/files/1/2788/8404/files/bunker-branding-logo-white_300x.png?v=1532322859" alt="Bunker Branding Co." class="img-fluid">
+                                <img v-if="isLogoLight" src="https://lh3.googleusercontent.com/proxy/wMY76HgF81wXmLADIRi0dWemCrM99RP0eAvIzd5kJNsiB2AaSqoBfW9DGrBjqsmozcIY7bd2qoGT4hz4k0Q1N4RHZ0Gt_ZFiXIY" alt="Roller Skates" class="img-fluid">
+                                <img v-else src="https://lh3.googleusercontent.com/proxy/wMY76HgF81wXmLADIRi0dWemCrM99RP0eAvIzd5kJNsiB2AaSqoBfW9DGrBjqsmozcIY7bd2qoGT4hz4k0Q1N4RHZ0Gt_ZFiXIY" alt="Roller Skates" class="img-fluid">
 
                             </a>
 
-                            <ul class="nav-icons align-items-center list-inline ml-auto d-block d-xl-none">
-                                <li class="nav-item list-inline-item nav-icon">
-                                    <a class="nav-link" href="#">
-                                        <i class="material-icons">search</i>
-                                    </a>
-                                </li>
-
-                                <li class="nav-item list-inline-item nav-icon d-none">
-                                    <a class="nav-link" href="/account" name="account" title="account" rel="nofollow" aria-label="Account">
-                                        <i class="material-icons">person</i>
-                                    </a>
-                                </li>
-
-                                <li class="nav-item list-inline-item nav-icon">
-
-
-
-
-
-                                    <a class="nav-link" href="/cart" name="cart" title="cart" rel="nofollow" aria-label="Cart">
-                                        <i class="material-icons">shopping_cart</i>
-                                        <span v-text="cart.item_count" class="cart-counter"></span>
-                                    </a>
-
-
-
-                                </li>
-                            </ul>
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent" v-if="!isInfluencerTemplate">
                                 <ul class="navbar-nav ml-3">
@@ -973,7 +939,7 @@ window.ShopifyAnalytics.merchantGoogleAnalytics = function() {
                             <ul class="nav-icons align-items-center list-inline ml-auto d-none d-xl-block">
 
                                 <li class="nav-item list-inline-item nav-icon">
-                                    <a class="nav-link" href="/account" name="account" title="account" rel="nofollow" aria-label="Account">
+                                    <a class="nav-link" href="/api/account" name="account" title="account" rel="nofollow" aria-label="Account">
                                         <i class="material-icons">person</i>
                                     </a>
                                 </li>
@@ -1336,56 +1302,6 @@ window.ShopifyAnalytics.merchantGoogleAnalytics = function() {
         }
     </script>
 
-
-    <script type="application/ld+json">
-        {
-        "url": "https://www.bunkerbranding.com",
-        "name": "Bunker Branding Co.",
-        "logo": {
-        "url": "https://cdn.shopify.com/s/files/1/2788/8404/files/bunker-branding-logo-white_200x.png?v=1532322859"
-        },
-        "sameAs": [
-        "https://www.facebook.com/bunkerbrandingco/",
-        "https://twitter.com/bunkerbranding",
-        "",
-        "https://www.instagram.com/bunkerbrandingco/"
-        ]
-        }
-    </script>
-
-
-
-    <script type="application/ld+json">
-        {
-        "url": "https://www.bunkerbranding.com",
-        "potentialAction": {
-        "target": "https://www.bunkerbranding.com/search?q={search_term_string}",
-        "query-input": "required name=search_term_string"
-        }
-        }
-    </script>
-
-
-
-    <script type="application/ld+json">
-        {
-        "itemListElement": [
-        {
-        "position": 1,
-        "item": {
-        "name": "Home"
-        }
-        }
-        ,{
-        "position": 2,
-        "item": {
-        "name": "Bunker Gear"
-        }
-        }
-
-        ]
-        }
-    </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
