--- a/Rollers/Views/_ViewImports.cshtml
+++ b/Rollers/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Rollers.ViewModels
 @using Rollers.Data.Repositories
-@using Rollers.Domain.Models  
+@using Rollers.Domain.Models
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers  
