added authorization and adding locations

--- a/Rollers/Views/Locations/Locations.cshtml
+++ b/Rollers/Views/Locations/Locations.cshtml
@@ -25,7 +25,7 @@
     {
         @foreach (var location in Model.PaginatedRollerSkateMapLocations())
         {
-            <div class="card text-center border-dark" style="width: 18rem" align="center">
+            <div class="card text-center border-dark" style="width: 18rem">
                 <div class="card-header">
                     @location.LocationName
                 </div>
