comments edit and delete

--- a/Rollers/Views/Locations/Locations.cshtml
+++ b/Rollers/Views/Locations/Locations.cshtml
@@ -20,7 +20,7 @@
         </button>
     </div>
 </div>
-<div class="row">
+<div style="display: flex; justify-content: center">
     @if (Model.RollerSkateMapLocations.Count > 0)
     {
         @foreach (var location in Model.PaginatedRollerSkateMapLocations())
