--- a/Rollers/Views/Locations/Location.cshtml
+++ b/Rollers/Views/Locations/Location.cshtml
@@ -1,21 +1,138 @@
 ﻿@model LocationViewModel
 
-<div class="card text-center border-dark">
-    <div class="card-header">
-        @Model.RollerSkateMapLocation.LocationName
-    </div>
-    <div class="card-body">
-        <p class="card-text">@Model.RollerSkateMapLocation.Address</p>
-        <p class="card-text">Created by @Model.RollerSkateMapLocation.User.FirstName @Model.RollerSkateMapLocation.User.LastName</p>
-        <p class="card-text">Latitude: @Model.RollerSkateMapLocation.Latitude, Longitude: @Model.RollerSkateMapLocation.Longitude</p>
-        <p>Comments: </p>
-        <lu>
-            @foreach (var comment in Model.RollerSkateMapLocation.Comments)
+    <div class="card-body border-light justify-content-center">
+        <div class="card-header">
+            @Model.RollerSkateMapLocation.LocationName
+        </div>
+        <div class="card-body border-light justify-content-center">
+            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+            @if (Model.RollerSkateMapLocation.Comments.Count != 0)
             {
-<li><p>@comment.CommentText</p></li>            }
-        </lu>
+                @foreach (var comment in Model.RollerSkateMapLocation.Comments)
+                {
+                    <div class="col-md-8">
+                        <div class="media g-mb-30 media-comment">
+                            <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://i.pinimg.com/564x/9c/5f/98/9c5f98a444d84211af793388a3661eb3.jpg" alt="Image Description">
+                            <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                                <div class="g-mb-15">
+                                    <h5 class="h5 g-color-gray-dark-v1 mb-0">@comment.User.FirstName @comment.User.LastName</h5>
+                                    <span class="g-color-gray-dark-v4 g-font-size-12">@comment.CreatedDateTime</span>
+                                </div>
+
+                                <p>
+                                    @comment.CommentText
+                                </p>
+
+                                <ul class="list-inline d-sm-flex my-0">
+                                    <li class="list-inline-item g-mr-20">
+                                        <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                                            <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3"></i>
+                                            178
+                                        </a>
+                                    </li>
+                                    <li class="list-inline-item g-mr-20">
+                                        <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                                            <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3"></i>
+                                            34
+                                        </a>
+                                    </li>
+                                    @if (
+                                       Rollers.Utilities.Helpers.CommentHelper.HasToShowDeleteButton(Context.User.Claims, comment.UserId)
+                                    )
+
+                                    {
+                                        <li class="list-inline-item ml-auto">
+                                            <button type="button" class="btn btn-link g-color-primary--hover" onclick="$('#text_id_@comment.Id.ToString()').show()">
+                                                <i><img src="~/img/pen.png" width="12" alt=""></i>
+                                                Edit
+                                            </button>
+                                            <textarea cols="50" rows="5" name="text" id="text_id_@comment.Id.ToString()" class="form-control" style="resize:vertical; display:none" placeholder="@comment.CommentText"></textarea>
+                                        </li>
+                                    }
+                                    @if (
+                                       Rollers.Utilities.Helpers.CommentHelper.HasToShowDeleteButton(Context.User.Claims, comment.UserId)
+                                    )
+                                    {
+                                        <li class="list-inline-item ml-auto">
+                                            <button type="button" class="btn btn-link g-color-primary--hover" data-toggle="modal" data-target="#popup_delete_comment_@comment.Id.ToString()">
+                                                <i><img src="~/img/pen.png" width="12" alt=""></i>
+                                                Delete
+                                            </button>
+                                            <div class="modal fade" id="popup_delete_comment_@comment.Id.ToString()" tabindex="-1" role="dialog" aria-labelledby="Add New Location" aria-hidden="true" style="display:none">
+                                                <div class="modal-dialog" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLabel">Add New Location</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+
+
+                                                        <div class="modal-body">
+                                                            <p>Do you really wanna delete this comment?</p>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                            <button type="button" id="button_delete_comment_@comment.Id.ToString()" class="btn btn-primary">Yes</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    }
+                                </ul>
+
+                            </div>
+                        </div>
+                    </div>
+
+                }
+            }
+            
+
+            <div class="col-md-8">
+                <div class="media g-mb-30 media-comment">
+                    <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                        Count of comments: @(Model.RollerSkateMapLocation.Comments?.Count ?? 0)
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-8">
+                <div class="media g-mb-30 media-comment">
+                    <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                        <form id="algin-form">
+                            <div class="form-group">
+                                <input type="text" id="addcomment-input" class="form-control" placeholder="Comment" style="background-color: white;">
+                            </div>
+                            <div hidden id="rollerSkateMapLocation-id">
+                                @(Model.RollerSkateMapLocation.Id < 1 ? 0 : Model.RollerSkateMapLocation.Id )
+                            </div>
+                            <div class="form-group">
+                                <button type="button" id="addcomment-submit-button" class="btn btn-primary">Add comment</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+
+
+
+
+
+                <p class="card-text">@Model.RollerSkateMapLocation.Address</p>
+                <p class="card-text">Created by @Model.RollerSkateMapLocation.User.FirstName @Model.RollerSkateMapLocation.User.LastName</p>
+                <p class="card-text">Latitude: @Model.RollerSkateMapLocation.Latitude, Longitude: @Model.RollerSkateMapLocation.Longitude</p>
+
+                <section>
+                    <div class="container">
+                        <div class="row">
+
+
+                        </div>
+                </section>
+            </div>
+        </div>
     </div>
-    <div class="card-footer text-muted">
-        Count of comments: @(Model.RollerSkateMapLocation.Comments?.Count ?? 0)
-    </div>
-</div>
