added edit, delete, likes and dislikes in comments; added map (manager, controller, view, js, css)

--- a/Rollers/Views/Shared/_Layout.cshtml
+++ b/Rollers/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - WebApplication</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/AjaxHelper.js" asp-append-version="true"></script>
+    <script src="~/js/googleMapManager.js" asp-append-version="true"></script>
 </head>
 <body>
 
@@ -51,9 +54,9 @@
 
     <partial name="_LoginPartialModal" />
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/AjaxHelper.js" asp-append-version="true"></script>
+    
 </body>
 </html>
