--- a/Rollers/wwwroot/css/site.css
+++ b/Rollers/wwwroot/css/site.css
@@ -1,6 +1,19 @@
-﻿body {
+﻿.form-error-message {
+    display: none;
+    margin-top: 5px;
+    font-size: 12px; !important;
+}
+
+body {
     margin-top: 20px;
     background: #eee;
+}
+
+#map {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
 }
 
 @media (min-width: 0) {
