--- a/Rollers/Views/Locations/AddLocationPartial.cshtml
+++ b/Rollers/Views/Locations/AddLocationPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 <div class="modal fade" id="add-new-location-popup" tabindex="-1" role="dialog" aria-labelledby="Add New Location" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Add New Location</h5>
@@ -12,22 +12,17 @@
 
 
             <div class="modal-body">
+
+                <div id="map"></div>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhw8SGIvP9F95IJxjhMWm62OATXgLF8Lo&callback=initAddLocationMap&libraries=&v=weekly"></script>
                 
                 <form>
-                    <div class="row justify-content-center my-3">
-                        <div class="col mx-auto ">
-                            <input type="text" id="addlocation-longitude-input" class="form-control" placeholder="Longitude">
-                        </div>
-                        <div class="col mx-auto my-auto">
-                            <input type="text" id="addlocation-latitude-input" class="form-control" placeholder="Latitude">
-                        </div>
-                    </div>
                     <div class="row justify-content-center my-3">
                         <div class="col mx-auto">
                             <input type="text" id="addlocation-name-input" class="form-control" placeholder="LocationName">
                         </div>
                         <div class="col mx-auto">
-                            <input type="text" id="addlocation-address-input" class="form-control" placeholder="Address">
+                            <input type="text" id="addlocation-address-input" class="form-control" placeholder="Address" disabled>
                         </div>
                     </div>
                     <div class="row justify-content-center my-3">
