added useful info, contacts, home added deleting locations

--- a/Rollers/Views/Home/Index.cshtml
+++ b/Rollers/Views/Home/Index.cshtml
@@ -1,1 +1,6 @@
-﻿<h3>Usefull Info Controller</h3>
+﻿<div class="col-md-8 offset-2 text-center" style="margin-top:150px">
+        <a class="text-light bg-dark nav-link @(ViewBag.Current == "Locations" ? "active" : "")"
+           asp-area="" asp-controller="Locations" asp-action="Locations">
+            <h1 class="display-2">Find or post your location</h1>
+</a>
+</div>
