--- a/Rollers/Views/Locations/Locations.cshtml
+++ b/Rollers/Views/Locations/Locations.cshtml
@@ -1,22 +1,14 @@
 ﻿@using Rollers.ViewModels
 
 @model Rollers.ViewModels.LocationsViewModel
+@{ 
+    ViewData["GoogleApiKey"] = Model.GoogleApiKey;
+}
 
 <div class="row p-3 align-items-center justify-content-center">
     <div class="col-4">
         <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#add-new-location-popup">
             Add Location
-        </button>
-    </div>
-    <div class="col-4">
-        <button type="button" class="btn btn-outline-dark">
-            My Locations
-        </button>
-    </div>
-
-    <div class="col-4">
-        <button type="button" class="btn btn-outline-dark">
-            3rd button
         </button>
     </div>
 </div>
@@ -25,24 +17,12 @@
     {
         @foreach (var location in Model.PaginatedRollerSkateMapLocations())
         {
-            <div class="card text-center border-dark" style="width: 18rem">
-                <div class="card-header">
-                    @location.LocationName
-                </div>
-                <div class="card-body">
-                    <p class="card-text">@location.Address</p>
-                    <p class="card-text">Created by @location.User.FirstName @location.User.LastName</p>
-                    <a asp-controller="Locations" asp-action="Location" asp-route-locationId="@location.Id" class="btn btn-secondary">See all information</a>
-                </div>
-                <div class="card-footer text-muted">
-                    Count of comments: @(location.Comments.Count)
-                </div>
-            </div>
+            <partial name="LocationPartial.cshtml" model="@location" view-data="ViewData"/>
         }
     }
 </div>
 
-<ul class="pagination" style="display: flex; justify-content: center">
+<ul class="pagination g-color-gray-dark-v4" style="display: flex; justify-content: center">
     @for (int i = 1; i <= Model.PageCount(); i++)
     {
         <li class="@(i == Model.CurrentPage ? "page-item active" : "page-item")">
@@ -51,4 +31,5 @@
 }
 </ul>
 
-<partial name="AddLocationPartial" />
+<partial name="AddLocationPartial"  model="@Model" />
+
