--- a/Rollers/Views/About/Index.cshtml
+++ b/Rollers/Views/About/Index.cshtml
@@ -1,1 +1,19 @@
-﻿<h4>About Us Controller</h4>
+﻿<div class="col-md-6 text-center align-content-center offset-3 justify-content-center" style="padding-top:100px">
+    <div class="media g-mb-15 media-comment" id="comment-body">
+        <div class="media-body u-shadow-v18 g-bg-secondary g-mr-3">
+            <div class="g-mb-15">
+                <div class="container">
+                    <div class="row text-center">
+                        <h4>
+                            We're Rollerblading assistant.
+                            A helpful site focused on
+                            rollerskating places.
+                        </h4>
+                        We are a site that wants to help people who like to skate. You can share cool spots on the roller-skating map with other people, which they can comment on and view around the world, as well as view popular places with the same commenting and viewing capabilities.
+                        We have developed roller skating learning bases for you so that you understand all the benefits of roller skating and help you choose new rollers.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
